# LifePathNumber

./: CMakeLists.txt  License
demo/: CMakeLists.txt  LifePathNumberDemo.cpp
include/: LifePathNumber.hpp
src/: LifePathNumber.cpp
test/: CMakeLists.txt  LifePathNumberTest.cpp
